force-app/main/default/objects/TrainingLineItem__c/TrainingLineItem__c.object-meta.xml
<CustomObject>
    <label>Training Line Item</label>
    <nameField>
        <label>Training Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>