force-app/main/default/objects/TrainingLineItem__c/fields/LineDescription__c.field-meta.xml
<CustomField>
    <fullName>LineDescription__c</fullName>
    <defaultValue>&apos;Product description will be auto-filled on save&apos;</defaultValue>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>