force-app/main/default/objects/TrainingLineItem__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>Price of the line item, including taxes. Leave blank to auto-fill from the product price on record creation or enter a new price.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>