force-app/main/default/objects/TrainingLineItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <defaultValue>&apos;Product code will be auto-filled on save&apos;</defaultValue>
    <label>Product Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>