force-app/main/default/objects/TrainingLineItem__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>Price__c * ( $CustomMetadata.TrainingVATRateMetadata__mdt.StandardRate.Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Isolated tax amount calculated from the price.</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>