force-app/main/default/objects/TrainingLineItem__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Training Line Items</relationshipLabel>
    <relationshipName>TrainingLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>